# research-rust

./: README.md
actixweb-basic-crud/: .env  .env.example  Cargo.toml  diesel.toml
actixweb-basic-crud/migrations/00000000000001_create_users/: down.sql  up.sql
actixweb-basic-crud/src/: db.rs  main.rs
actixweb-basic-crud/src/controllers/: user_controller.rs
actixweb-basic-crud/src/model/: schema.rs  user.rs
actixweb-basic-crud/src/route/: api_routes.rs  mod.rs  user_routes.rs
hello-world/: README.md
hello-world/src/: main.rs
routing-actixweb/: Cargo.toml  README.md
routing-actixweb/src/: main.rs
routing-actixweb/src/controllers/: home_controller.rs
routing-actixweb/src/model/: user.rs
routing-actixweb/src/routes/: api_routes.rs
