[package]
name = "actixweb-basic-crud"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.4"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono", "uuid"] }
r2d2 = "0.8"
uuid = { version = "1", features = ["serde", "v4"] }
